# frtl_2025_ws

./: .gitignore  .gitmodules  README.md  calib.py  docker-compose.yml  rasp5_setup.md
.devcontainer/: Dockerfile  devcontainer.json
src/itajuba/: README.md
src/itajuba/cv_utils/: setup.py
src/itajuba/drone_lib/: CMakeLists.txt  package.xml
src/itajuba/drone_lib/include/drone/: Drone.hpp
src/itajuba/drone_lib/src/: Drone.cpp
src/itajuba/fase4/: CMakeLists.txt  package.xml  tarefas_de_hoje.md
src/itajuba/fase4/include/: PIDController.hpp  README.md  SearchLaneState.hpp  TakeoffState.hpp
src/itajuba/fase4/launch/: README.md  fase4.launch.py  ground_station.launch.py  params.yaml
src/itajuba/fase4/src/: README.md  fase4.cpp  vision.cpp
src/scripts/: gancho_drop.py
tasks/: agent.sh  apertar.sh  build.sh  ground_station.sh  image_bridge.sh  mavlink_router.sh  onboard.sh  setup.sh  simulate.sh
